--- a/Flashy/MainWindow.xaml
+++ b/Flashy/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Flashy"   
         xmlns:pages="clr-namespace:Flashy.Pages"
+        xmlns:vm="clr-namespace:Flashy.ViewModels;assembly=Flashy.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
@@ -25,6 +26,7 @@
         </Style>
         <BitmapImage x:Key="AddButtonBmp" UriSource="./Resources/AddButton.bmp"/>
         <local:ViewsNavigator x:Key="Navigator"/>
+        <vm:DecksViewModel x:Key="DecksViewModel"/>
     </Window.Resources>
     <DockPanel>
         <DockPanel.Background>
@@ -33,13 +35,15 @@
 
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar x:Name="Toolbar" Background="#FF70A1D9" VerticalAlignment="Top">
-                <Button x:Name="Add" Content="Add" Style="{StaticResource DefaultButton}" Click="AddDecks"/>
-                <Button x:Name="Learn" Content="Learn" Style="{StaticResource DefaultButton}" Click="LearnDeck"/>
+                <Button x:Name="DecksOverviewButton" Content="Decks" Click="ViewDecks"/>
+                <Button x:Name="AddDecksButton" Content="Add" Click="AddDecks"/>
+                <Button x:Name="LearnButton" Content="Learn" Click="LearnDeck"/>
             </ToolBar>
         </ToolBarTray>
 
-        <ContentControl x:Name="MainView" Grid.Row="1" DataContext="{StaticResource Navigator}"
-                        Content="{Binding View}"/>
+        <ContentControl x:Name="MainView" Grid.Row="1" DataContext="{Binding Source={StaticResource DecksViewModel}}"
+                        Content="{Binding Source={StaticResource Navigator}, Path=View}"/>
+
 
 
         <!--<StackPanel x:Name="AddButtonPanel" Grid.Row="1" HorizontalAlignment="Right" 
