--- a/Flashy/Pages/DecksOverview.xaml
+++ b/Flashy/Pages/DecksOverview.xaml
@@ -6,8 +6,9 @@
              xmlns:local="clr-namespace:Flashy.Pages"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="LightGray">
-        <ListView x:Name="DeckList" ItemsSource="{Binding Path=Decks}">
+    <ScrollViewer Background="LightGray" VerticalScrollBarVisibility="Auto">
+        <ListView x:Name="DeckList" ItemsSource="{Binding Path=Decks}" SelectionMode="Single"
+                  LostFocus="DeckList_LostFocus">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border Name="border" BorderBrush="Aqua" BorderThickness="1" MinWidth="500"
@@ -22,5 +23,5 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>    
-    </Grid>
+    </ScrollViewer>
 </UserControl>
